解决点击折叠按钮无法显示导航栏的问题
在绑定之前使用off()，清楚所有事件
使用show/hide/toggle切换样式
将导航栏动态改变的JS代码添加common.js

--- a/views/feedback/feedback.css
+++ b/views/feedback/feedback.css
@@ -17,7 +17,8 @@ a{text-decoration: none;}
 /*导航栏*/
 .nav .nav-feedback{
     background-color:#efebf8;
-    border-bottom:4px solid #5BAEFF
+    border-bottom:4px solid #5BAEFF;
+    border-radius: 8px;
 }
 .nav li a[class=nav-feedback]:hover,
 .nav li a[class=nav-feedback]:focus,
