--- a/views/discussion/discussion.css
+++ b/views/discussion/discussion.css
@@ -16,7 +16,8 @@ a{text-decoration: none;}
 /*导航栏*/
 .nav .nav-discussion{
     background-color:#efebf8;
-    border-bottom:4px solid #5BAEFF
+    border-bottom:4px solid #5BAEFF;
+    border-radius: 8px;
 }
 .nav li a[class=nav-discussion]:hover,
 .nav li a[class=nav-discussion]:focus,
