--- a/views/exercise/exercise.css
+++ b/views/exercise/exercise.css
@@ -8,7 +8,8 @@
 /*导航栏*/
 .nav .nav-exercise{
     background-color:#efebf8;
-    border-bottom:4px solid #5BAEFF
+    border-bottom:4px solid #5BAEFF;
+    border-radius: 8px;
 }
 .nav li a[class=nav-exercise]:hover,
 .nav li a[class=nav-exercise]:focus,
