--- a/views/video/video.css
+++ b/views/video/video.css
@@ -10,7 +10,8 @@
 /*导航栏*/
 .nav .nav-video{
     background-color:#efebf8;
-    border-bottom:4px solid #5BAEFF
+    border-bottom:4px solid #5BAEFF;
+    border-radius: 8px;
 }
 .nav li a[class=nav-video]:hover,
 .nav li a[class=nav-video]:focus,
