完善视频评论验证
利用ajax验证登录状态
video.js
video.php

--- a/views/video/video.css
+++ b/views/video/video.css
@@ -252,7 +252,7 @@
     .comment-box, .comment textarea{
         width:90%;
     }
-    .comment input{
+    .comment form input{
         margin-right:5%;
     }
 
