--- a/views/video/video.css
+++ b/views/video/video.css
@@ -32,6 +32,14 @@
     border-radius:5px;    background-color: #7A94A1;
 }
 
+.video-box iframe{
+    height:100%;
+    width: 100%;
+    border:2px solid #7A94A1;
+    border-radius:5px;    background-color: #7A94A1;
+}
+
+
 .video-list{
     position: relative;
     float: right;
