解决教学视频页，视频尺寸显示错误问题
使用HTML5 video元素，动态改变src，实现点播

--- a/views/video/video.css
+++ b/views/video/video.css
@@ -78,6 +78,18 @@
     border:1px solid #999;
 }
 
+.list-item{
+    background-color: #DDD;
+}
+
+.list-item button{
+    background-color: none;
+    border:none;
+    cursor: pointer;
+    width: 100%;
+
+}
+
 .list-item img{
     width:100px;
     height:67px;
