--- a/views/discussion/discussion.css
+++ b/views/discussion/discussion.css
@@ -239,6 +239,7 @@ a{text-decoration: none;}
 /*
 * 分页按钮
 */
+/*
 .page{
     width: 400px;
     position: absolute;
@@ -248,6 +249,11 @@ a{text-decoration: none;}
     margin-left:-200px;
 }
 
+.pagination{
+	position: relative;
+	text-align:center;
+}
+*/
 .page input{
     display: inline;
     width:2em;
